--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: bundesligR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: All Final Tables of the Bundesliga.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Philipp Ottolinger
+Maintainer: Philipp Ottolinger <philipp@ottolinger.de>
+Description: All final tables of Germany's highest football (soccer!) league, the Bundesliga. Contains data from 1964 to 2016.
+License: GPL-3
+URL: https://github.com/ottlngr/bundesligR
+BugReports: https://github.com/ottlngr/bundesligR/issues
 LazyData: TRUE
 RoxygenNote: 5.0.1
