--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,6 @@ Description: All final tables of Germany's highest football (soccer!) league, th
 License: GPL-3
 URL: https://github.com/ottlngr/bundesligR
 BugReports: https://github.com/ottlngr/bundesligR/issues
+Depends: R (>= 2.10)
 LazyData: TRUE
 RoxygenNote: 5.0.1
